<resources>
    <string name="app_name">CSGO Wallpapers</string>

    <string name="offline_notice">No connection could be established.\n
        Do you want to browse downloaded Wallpapers?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_refresh">Refresh</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="report_email">E-mail</string>
    <string name="report_reason">Report reason.</string>
    <string name="report_submit">Submit</string>
    <string name="report_successful">Report was sent successfully</string>
    <string name="error_mail_incorrect">Please enter a valid mail address.</string>
    <string name="error_report_empty">Report cannot be empty.</string>
    <string name="error_report_short">Report message is too short.</string>
    <string name="error_report_long">Report message is too long.</string>
    <string name="error_already_reported">You have already reported this wallpaper.</string>
    <string name="ib_delete">Delete</string>
    <string name="ib_open">View/Save</string>
    <string name="ib_download">Download</string>
    <string name="ib_set">Set as wallpaper</string>
    <string name="ib_report">Report</string>

    <string name="dialog_viewsave">Choose an action below:</string>
    <string name="open">Open</string>
    <string name="save">Save</string>

    <string name="download_starting">Download is starting&#8230;</string>
    <string name="download_size">Downloading: $/£ </string>
    <string name="download_successful">Download finished successfully</string>

    <string name="wp_author">$Author:£ %author</string>
    <string name="wp_downloads">$Downloads:£ %downloads</string>
    <string name="wp_category">$Category:£ %category</string>

    <string name="dev_instagram">Developer Instagram</string>

    <string name="ad_main">ca-app-pub-9871252548902893/7480166558</string>
    <string name="ad_category">ca-app-pub-9871252548902893/8821168389</string>

    <!-- My Apps -->
    <string name="app_csgo">CSGO Wallpapers</string>
    <string name="csgo_package">hathoute.com.wallpapers</string>

    <string name="app_rl">RL Wallpapers</string>
    <string name="rl_package">hathoute.com.wallpapers.rl</string>
</resources>
