<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/rrItem"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:paddingTop="2dp">

    <hathoute.com.wallpapers.SquareImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sivWallpaper"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llContainer"
        android:layout_alignParentBottom="true"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/ibDelete"
            android:background="@drawable/icon_delete"
            android:contentDescription="@string/ib_delete"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/ibDownload"
            android:background="@drawable/icon_download"
            android:contentDescription="@string/ib_download"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/ibView"
            android:background="@drawable/icon_open"
            android:contentDescription="@string/ib_open"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/ibSet"
            android:background="@drawable/icon_set"
            android:contentDescription="@string/ib_set" />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>