<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_gradient"
    tools:context=".WallpaperActivity">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <hathoute.com.wallpapers.SquareImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sivWallpaper"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llContainer"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:background="@drawable/bg_primary">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/llDelete"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/icon_delete"
                    android:contentDescription="@string/ib_delete"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delete"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/llReport"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/icon_flag"
                    android:contentDescription="@string/ib_delete"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ib_report"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/llDownload"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/icon_download"
                    android:contentDescription="@string/ib_download"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Download"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/llView"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/icon_open"
                    android:contentDescription="@string/ib_open"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/llSet"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/icon_set"
                    android:contentDescription="@string/ib_set"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Set"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvWpCategory"
            android:text=""
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvWpAuthor"
            android:text=""
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvWpDownloads"
            android:text=""
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
</ScrollView>